# duckhouse

./: .gitignore  README.md  expr.py  flake.nix  iceberg_over_flight.py  pyproject.toml
dbt_flight_project/: lib.py  profiles.yml
dbt_flight_project/models/: sources.yml
dbt_flight_project/models/examples/: taxi_metric.sql  taxi_staging.sql  test_write_model.sql
dbt_flight_project/old_models/: first_model.sql
dbt_flight_project/plugins/: flight.py
dbt_project/plugins/: flight.py
ingestion/: ingestion.py
