[project]
name = "multi-engine-data-stack-arrow-flight"
version = "0.1.0"
description = "experimentation with xorq and dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "urllib3>=2.2.3",
]


[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "ruff>=0.6.7",
    "xorq>=0.1.16",
]
