[project]
name = "multi-engine-data-stack-arrow-flight"
version = "0.0.0"
description = "experimentation with xorq and dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.2",
    "pyiceberg[sql-sqlite]>=0.9.0",
    "xorq",
    "urllib3>=2.2.3",
    "snowflake-connector-python>=3.14.0",
    "opentelemetry-api>=1.32.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "multi-engine-data-stack-arrow-flight",
    "ruff>=0.6.7",
]

[tool.setuptools]
py-modules = ["dbt_xorq_project"]

[tool.uv.sources]
multi-engine-data-stack-arrow-flight = { workspace = true }
xorq = {path = "dist/xorq-0.2.1-py3-none-any.whl"}
